option java_outer_classname="EnumerationPointerProtocol";
package com.alachisoft.tayzgrid.common.protobuf;

message EnumerationPointer {
	optional sint32 chunkId = 1;
	optional string id = 2;
	optional bool isDisposed = 3; 
}